Integer, Double, and Boolean record components are initialized now. Changed from constructor of Wrapper classes to factory method (e.g. Integer.valueOf(x) instead of new Integer(x))